Fix iOS help invisibility bug

--- a/src/app/modules/admin/pages/help/article/article.component.sass
+++ b/src/app/modules/admin/pages/help/article/article.component.sass
@@ -1,6 +1,6 @@
 @import ../../../../../../var
 
-::ng-deep div.classes
+::ng-deep .article
     -webkit-transform: translate3d(0, 0, 0)
 
 .toolbar-extention
@@ -102,6 +102,7 @@
 
             quill-editor
                 min-height: 200px
+                -webkit-transform: translate3d(0, 0, 0)
 
                 .toolbar
                     min-height: 48px
@@ -183,6 +184,7 @@
                             min-height: 200px
                             max-height: calc(100vh - 144px)
                             caret-color: mat-color($primary-light)
+                            -webkit-user-select: text
 
                             h2
                                 font-size: 20px
