--- a/src/app/modules/help/pages/help/help.component.sass
+++ b/src/app/modules/help/pages/help/help.component.sass
@@ -11,6 +11,7 @@
 
     mat-toolbar
         padding: 0 8px
+        background-color: transparent
 
         .close-btn
             color: mat-color($foreground-light, icon)
